[gd_scene load_steps=3 format=3 uid="uid://ct2pf7jdxotho"]

[ext_resource type="Texture2D" uid="uid://danpa70ygoi1q" path="res://addons/datatable_godot/icons/Search.png" id="1_mxuvw"]
[ext_resource type="Script" path="res://addons/datatable_godot/ui/nodes/importer/customResource/customResource.gd" id="1_pgpw0"]

[node name="CustomResource" type="Window"]
title = "Import X.trs [ResourceClass]"
initial_position = 2
size = Vector2i(600, 400)
visible = false
transient = true
exclusive = true
script = ExtResource("1_pgpw0")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="box_search" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="le_search" type="LineEdit" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer/box_search"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search..."

[node name="bt_search" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer/box_search"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
text = "  X  "
icon = ExtResource("1_mxuvw")
icon_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="var_list" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
text = "Be aware that you can only import 1 dictionary: If you select a dictionary any other selected var will be unselected!"
autowrap_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Amount selected: 0/10"

[node name="bt_select" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Confirm selection"
